<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_main"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/main" />

    <item
        android:id="@+id/nav_components"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/Components" />

    <item
        android:id="@+id/nav_configs"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/Configs" />

    <item
        android:id="@+id/nav_rules"
        android:icon="@drawable/img"
        android:title="@string/rules" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/img_1"
        android:title="@string/profile" />

</menu>