<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvSocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Socket"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Brand"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvSpecs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Specs"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4caf50"
            android:text="@string/Config"
            android:textColor="#0D47a1"
            android:textStyle="bold"
            app:cornerRadius="1dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.cardview.widget.CardView>