<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainFragment">


    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/main"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnComponents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/Components"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnConfigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/Configs"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/rules_components"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/profile"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
