<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4caf50"
        android:text="@string/logout"
        android:textColor="#0D47a1"
        android:textStyle="bold"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>